--- a/src/app/chat/chat-editor/chat-editor.component.html
+++ b/src/app/chat/chat-editor/chat-editor.component.html
@@ -2,3 +2,5 @@
 
 <input type="text" name="" id="" [(ngModel)]="message" />
 <button (click)="sendMessage()">sendChat</button>
+
+<button (click)="logout()" >logout</button>
