--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -3,11 +3,8 @@
     <div class="cell is-row-span-12 is-col-start-1 box chatlist block">
       <app-chat-list></app-chat-list>
     </div>
-    <div class="cell is-col-span-3 is-row-span-11 is-row-start-1 is-col-start-2 box">
+    <div class="cell is-col-span-3 is-col-start-2 is-row-start-1 is-row-span-12 chatwindow">
       <router-outlet></router-outlet>
-    </div>
-    <div class="cell is-col-span-3 is-col-start-2 box">
-      <app-chat-editor></app-chat-editor>
     </div>
   </div>
 </div>
