--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -1,5 +1,6 @@
 .cell {
   height: 100%;
+  margin: 0;
 }
 
 .fixed-grid {
@@ -16,6 +17,10 @@ div {
   border-radius: 5px;
 }
 
-.chatlist {
-  overflow-y: auto;
+.chatwindow {
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
 }
