--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,8 +2,9 @@
 
 html,
 body {
-  height: 100%;
+  height: 98vh;
   box-sizing: border-box;
+  overflow: hidden;
 }
 div {
   box-sizing: border-box;
