--- a/src/app/chat/chat-window/chat-window.component.html
+++ b/src/app/chat/chat-window/chat-window.component.html
@@ -1,6 +1,6 @@
 <div class="chatcontainer">
-  <div class="box has-background-primary chatheader has-text-white-ter is-size-2">
-    <h1>{{ conversationName }}</h1>
+  <div class="has-background-primary chatheader has-text-white-ter is-size-2">
+    <p>{{ conversationName }}</p>
   </div>
 
   <div class="chats" #chatBubbleContainer>
