--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,9 +1,9 @@
-<div class="fixed-grid has-4-cols has-12-rows">
+<div class="fixed-grid has-4-cols">
   <div class="grid">
-    <div class="cell is-row-span-12 is-col-start-1 box chatlist block">
+    <div class="cell is-col-start-1 box chatlist block">
       <app-chat-list></app-chat-list>
     </div>
-    <div class="cell is-col-span-3 is-col-start-2 is-row-start-1 is-row-span-12 chatwindow">
+    <div class="cell is-col-span-3 is-col-start-2 chatwindow">
       <router-outlet></router-outlet>
     </div>
   </div>
