--- a/src/app/chat/chat-window/chat-bubble/chat-bubble.component.scss
+++ b/src/app/chat/chat-window/chat-bubble/chat-bubble.component.scss
@@ -1,8 +1,10 @@
 .bubbleContainer {
   margin: 1rem;
-  padding: 1rem;
+  padding: 0.5rem;
   width: 45%;
   border-radius: 0 1rem 1rem 1rem;
+  display: flex;
+    flex-direction: column;
 }
 
 .myMsg {
