--- a/src/app/chat/chat-editor/chat-editor.component.html
+++ b/src/app/chat/chat-editor/chat-editor.component.html
@@ -1,4 +1,9 @@
-<div class="chatEditor" >
-  <textarea class="textarea is-small" rows="2"  placeholder="New Message...." [(ngModel)]="message" ></textarea>
-  <button class="button is-primary" (click)="sendMessage()" >send</button>
+<div class="chatEditor">
+  <textarea
+    class="textarea is-small"
+    rows="2"
+    placeholder="New Message...."
+    [(ngModel)]="message"
+  ></textarea>
+  <button class="button is-primary" (click)="sendMessage()">send</button>
 </div>
